--- a/src/pages/components/main/main.module.scss
+++ b/src/pages/components/main/main.module.scss
@@ -1,6 +1,10 @@
-.main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+  max-width: 600px;
+  min-width: 320px;
+  margin: 0 auto;
+  padding: 5em 1em 0 1em;
 }
